--- a/src/component/ResumePdf.css
+++ b/src/component/ResumePdf.css
@@ -30,6 +30,8 @@
 
 .innerContainer :hover {
     transform: scale(1.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+    box-shadow: 0 0 50px rgba(199, 198, 198, 0.4);
     /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
   
