--- a/src/component/Experience/Experience.css
+++ b/src/component/Experience/Experience.css
@@ -29,6 +29,7 @@
 .experience .right{
     max-width: 350px;
     margin: 30px;
+    padding: 20px;
     /* border-radius: 15px; */
     /* background-color: #555554; */
 }
@@ -76,7 +77,7 @@
 .experience .right:hover {
     transform: scale(1.1);
     background-color: rgb(32, 32, 32);
-    border-radius: 50px;
-    
+    border-radius: 50px;    
+    transition: transform 0.3s, box-shadow 0.3s;
     /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
