--- a/src/component/HeroImg2.css
+++ b/src/component/HeroImg2.css
@@ -7,17 +7,18 @@
 
 .hero-img::before {
     content: "";
-    background: url("https://ou.ac.lk/wp-content/uploads/2021/04/Software-Development.jpg");
+    /* background: url("https://ou.ac.lk/wp-content/uploads/2021/04/Software-Development.jpg"); */
 
     background-size: cover;
     background-position: center top;
     height: 100%;
     width: 100%;
     position: absolute;
+    
     top: 0;
     left: 0;
     z-index: -1;
-    opacity: 0.8;
+    /* opacity: 0.8; */
 
 
 }
@@ -33,12 +34,13 @@
 
 .heading h1 {
     font-size: 4rem;
-
+    
 }
 
 .heading p {
     font-size: 2rem;
     text-align: center;
+    width: 70%;
 }
 
 @media screen and (max-width:640px) {
