--- a/src/component/ProjectOverview/ProjectCard.css
+++ b/src/component/ProjectOverview/ProjectCard.css
@@ -1,16 +1,23 @@
-.pricing {
+.project {
     width: 100%;
     padding: 6rem 1rem;
     background: #000;
 
+
 }
 
+.project .h {
+    text-align: center;
+}
+
+
 .card-container {
-    max-width: 1140;
+    max-width: 1000;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 40px;
+    grid-gap: 50px;
+    padding: 30px;
 }
 
 .card {
@@ -22,48 +29,35 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-
+    min-height: 500px;
+    transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .card:hover {
-    background-color: #f4ce15;
-
+    transform: scale(1.05);
+    box-shadow: 0 0 50px rgba(199, 198, 198, 0.4);
 }
 
-.card h3 {
-    font-size: 1.4rem;
-    padding: 1rem;
-}
 
 .card p {
     padding: 10px 0;
-    font-size: xx-large;
 
+    color: white;
+    font-size: 30px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
 }
 
-.card .description{
-font-size: small;
-background-color: rgba(255, 255, 255, 0.2);
-border-radius: 5px 5px;
+.card .description {
+    font-size: small;
+    background-color: rgba(72, 70, 70, 0.9);
+    border-radius: 5px 5px;
 }
 
-.bar {
-    border-bottom: 1px solid #eee;
-    width: 10%;
-    margin: 1.5rem auto;
-    display: block;
-}
-
-.btc {
-    font-size: 4rem;
-    font-weight: 600;
-    padding: 1rem 0;
-}
 
 .btn_grp {
     display: "flex";
     flex-direction: "column-reverse";
-    
+
 }
 
 .card .btn {
@@ -77,15 +71,15 @@ border-radius: 5px 5px;
     display: block;
     width: 80%;
     margin: 2rem auto;
-    padding: 12px 32px;  
-  font-size: 1rem;
-  text-transform: uppercase;
-  background: rgb(248,217,15);
-  color: #222;
-  border: 1px solid #fff;
-  font-weight: 550;
-  cursor: pointer;
-  border-radius: 5px 5px;
+    padding: 12px 32px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    background: rgb(248, 217, 15);
+    color: #222;
+    border: 1px solid #fff;
+    font-weight: 550;
+    cursor: pointer;
+    border-radius: 5px 5px;
 }
 
 
